@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-16T02:08:02Z",
+  "timestamp" : "2022-09-18T08:22:13Z",
   "count_outdated" : 139,
   "uniques_outdated" : 95,
-  "count" : 143,
-  "uniques" : 99,
+  "count" : 144,
+  "uniques" : 100,
   "clones" : [
     {
       "timestamp": "2022-09-11T00:00:00Z",
@@ -28,6 +28,13 @@
     },
     {
       "timestamp": "2022-09-15T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-18T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
