@@ -1,3 +1,11 @@
+2022-09-18T08:22:13Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3076431772
+* notice: last 14d: unq all: 1 5
+* notice: prev accum: outdated-unq outdated-all / unq all: 95 139 / 99 143
+* notice: next accum: outdated-unq outdated-all / unq all: 95 139 / 100 144
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-09-18]
+
 2022-09-16T02:08:02Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3064945570
 * notice: last 14d: unq all: 1 4
